# clike

./: README.md  mk-devel  run-test
clike-ast/: Makefile  clike-ast.cabal  uuagc_options
clike-ast/src/Language/CLike/: AST.ag  Parser.hs  PreProcess.ag  PreProcess.hs
clike-ast/src/Language/CLike/AST/: AbsSyn.ag  NameKey.ag
clike-ast/src/Language/CLike/PreProcess/: Env.hs  Eval.ag  ParseOpts.hs  PreProcess.ag  State.hs  Types.hs
clike-ast/test/: Test1.hs  test1-1.inp
clike-examples/: clike-examples.cabal
clike-examples/test/: TestAst1.hs  test-ast1-1.inp  test-ast1-1sub1.inp  test-ast1-1sub2.inp  test-lexer1-1.inp
clike-lexer/: Makefile  clike-lexer.cabal
clike-lexer/src/Language/CLike/: Lexer.x
clike-lexer/test/: Test1.hs  test1-1.inp
