Name:                clike-ast
Version:             0.1.0.0
Copyright:           Utrecht University, Department of Information and Computing Sciences, Software Technology group
Description:         C like language tools, an ast
Synopsis:            C like language tools, an ast
Homepage:            https://github.com/atzedijkstra/clike
Bug-Reports:         https://github.com/atzedijkstra/clike/issues
License:             BSD3
License-file:        ""
Author:              atze@uu.nl
Maintainer:          atze@uu.nl
Category:            Development
Build-Type:          Custom
Cabal-Version:       >= 1.8
Extra-Source-Files:  uuagc_options,
                     Language/CLike/AST.ag,
                     Language/CLike/AST/AbsSyn.ag

Source-Repository head
  Type:              git
  Location:          git://github.com/atzedijkstra/clike.git

Library
  Hs-Source-Dirs:    src
  Extensions:        
  Exposed-Modules:   Language.CLike.AST,
                     Language.CLike.Parser
  Other-Modules:     
  Build-Depends:     base >= 4 && < 5,
                     uuagc >= 0.9.40.3,
                     uuagc-cabal >= 1.0.3.0,
                     clike-lexer >= 0.1.0.0,
                     uu-parsinglib >= 2.7.4

Executable test-ast1
  Hs-Source-Dirs:    test
  Main-Is:           Test1.hs
  Build-Depends:     base >= 4 && < 5,
                     clike-lexer >= 0.1.0.0,
                     clike-ast >= 0.1.0.0
