Name:                clike-ast
Version:             0.1.0.0
Copyright:           Utrecht University, Department of Information and Computing Sciences, Software Technology group
Description:         C like language tools, an ast
Synopsis:            C like language tools, an ast
Homepage:            https://github.com/atzedijkstra/clike
Bug-Reports:         https://github.com/atzedijkstra/clike/issues
License:             BSD3
License-file:        ""
Author:              atze@uu.nl
Maintainer:          atze@uu.nl
Category:            Development
Build-Type:          Custom
Cabal-Version:       >= 1.8
Extra-Source-Files:  uuagc_options,
                     Language/CLike/AST.ag,
                     Language/CLike/AST/AbsSyn.ag,
                     Language/CLike/AST/NameKey.ag,
                     Language/CLike/PreProcess/PreProcess.ag,
                     Language/CLike/PreProcess/Eval.ag

Source-Repository head
  Type:              git
  Location:          git://github.com/atzedijkstra/clike.git

Library
  Hs-Source-Dirs:    src
  Extensions:        TypeSynonymInstances, FlexibleInstances, NoMonomorphismRestriction, DeriveDataTypeable, TemplateHaskell
  Exposed-Modules:   Language.CLike.AST,
                     Language.CLike.Parser,
                     Language.CLike.PreProcess.PreProcess,
                     Language.CLike.PreProcess.Env,
                     Language.CLike.PreProcess.State,
                     Language.CLike.PreProcess
  Other-Modules:     Language.CLike.PreProcess.Eval
  Build-Depends:     base >= 4 && < 5,
                     containers >= 0.4.0.0,
                     transformers >= 0.3.0.0,
                     mtl >= 2.1.0,
                     data-lens >= 2.0.1,
                     data-lens-template >= 2.1,
                     uuagc >= 0.9.40.3,
                     uuagc-cabal >= 1.0.3.0,
                     clike-lexer >= 0.1.0.0,
                     uu-parsinglib >= 2.7.4,
                     uhc-util >= 0.1.1.0

