Name:                clike-examples
Version:             0.1.0.0
Copyright:           Utrecht University, Department of Information and Computing Sciences, Software Technology group
Description:         C like language tools, a lexer
Synopsis:            C like language tools, a lexer
Homepage:            https://github.com/atzedijkstra/clike
Bug-Reports:         https://github.com/atzedijkstra/clike/issues
License:             BSD3
License-file:        ""
Author:              atze@uu.nl
Maintainer:          atze@uu.nl
Category:            Development
Build-Type:          Simple
Cabal-Version:       >= 1.8
Extra-Source-Files:  

Source-Repository head
  Type:              git
  Location:          git://github.com/atzedijkstra/clike.git

Executable test-lexer1
  Hs-Source-Dirs:    test
  Main-Is:           TestLexer1.hs
  Build-Depends:     base >= 4 && < 5,
                     clike-lexer >= 0.1.0.0

Executable test-ast1
  Hs-Source-Dirs:    test
  Main-Is:           TestAst1.hs
  Build-Depends:     base >= 4 && < 5,
                     clike-lexer >= 0.1.0.0,
                     clike-ast >= 0.1.0.0,
                     uhc-util >= 0.1.1.0,
                     optparse-applicative >= 0.5.2
